Completed switch to Fulcrum