@@ -6,8 +6,12 @@ def packageName = 'flywheel-standalone'
 dependencies {
   runtime project(':flywheel-auth-stub-http')
   runtime project(':flywheel-backplane-kafka')
+  runtime project(':flywheel-plugin-beacon')
+  runtime project(':flywheel-plugin-toplog')
+    
   runtime 'com.obsidiandynamics.log4jextras:log4jextras-json:0.2.0'
   runtime 'com.obsidiandynamics.log4jextras:log4jextras-splunk:0.2.0'
+  runtime 'org.slf4j:slf4j-log4j12:1.7.25'
 }
 
 jar {
@@ -28,12 +32,4 @@ task dockerBuild(type: Exec) {
   doLast {
     println "Built image $dockerRepo"
   }
-}
-
-def perfJvmArgs = '-server -XX:-MaxFDLimit -XX:+TieredCompilation -XX:+UseNUMA -XX:+UseCondCardMark -XX:-UseBiasedLocking -Xms1G -Xmx4G -Xss1M -XX:+UseParallelGC'
-
-task beaconEdge(type: JavaExec) {
-  systemProperties = System.properties
-  classpath = sourceSets.main.runtimeClasspath + sourceSets.test.runtimeClasspath
-  main = 'au.com.williamhill.flywheel.beacon.RunBeaconEdge'
 }
